Security_part_8_1: update SecurityClientDetails.java